[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/gdscript-course-builder/ui/LessonContentBlock.gd" type="Script" id=1]
[ext_resource path="res://addons/gdscript-course-builder/ui/TextEditDialog.tscn" type="PackedScene" id=2]

[sub_resource type="Image" id=8]
data = {
"data": PoolByteArray( 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42 ),
"format": "RGB8",
"height": 8,
"mipmaps": false,
"width": 8
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 8 )
size = Vector2( 8, 8 )

[sub_resource type="StyleBoxTexture" id=7]
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 8, 8 )

[sub_resource type="Image" id=9]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=5]
flags = 4
flags = 4
image = SubResource( 9 )
size = Vector2( 16, 16 )

[node name="LessonContentBlock" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" type="PanelContainer" parent="."]
margin_left = 4.0
margin_top = 2.0
margin_right = 1916.0
margin_bottom = 1078.0
mouse_filter = 2
custom_styles/panel = SubResource( 7 )

[node name="Layout" type="VBoxContainer" parent="BackgroundPanel"]
margin_right = 1912.0
margin_bottom = 1076.0

[node name="HeaderBar" type="HBoxContainer" parent="BackgroundPanel/Layout"]
margin_right = 1912.0
margin_bottom = 24.0

[node name="DragIcon" type="TextureRect" parent="BackgroundPanel/Layout/HeaderBar"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 20.0
mouse_default_cursor_shape = 13
size_flags_vertical = 4
texture = SubResource( 5 )

[node name="ContentTitle" type="HBoxContainer" parent="BackgroundPanel/Layout/HeaderBar"]
margin_left = 20.0
margin_right = 1826.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="BackgroundPanel/Layout/HeaderBar/ContentTitle"]
margin_top = 5.0
margin_right = 12.0
margin_bottom = 19.0
text = "1."
valign = 1

[node name="LineEdit" type="LineEdit" parent="BackgroundPanel/Layout/HeaderBar/ContentTitle"]
margin_left = 16.0
margin_right = 1806.0
margin_bottom = 24.0
size_flags_horizontal = 3
clear_button_enabled = true

[node name="Label" type="Label" parent="BackgroundPanel/Layout/HeaderBar/ContentTitle/LineEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
custom_colors/font_color = Color( 1, 1, 1, 0.305882 )
text = "Optional sub-header, also used for the fold on notes"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveButton" type="Button" parent="BackgroundPanel/Layout/HeaderBar"]
margin_left = 1830.0
margin_right = 1912.0
margin_bottom = 24.0
text = "Remove"
icon = SubResource( 5 )
flat = true

[node name="Padding" type="Control" parent="BackgroundPanel/Layout"]
margin_top = 28.0
margin_right = 1912.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 8 )
mouse_filter = 2

[node name="BlockType" type="HBoxContainer" parent="BackgroundPanel/Layout"]
margin_top = 40.0
margin_right = 1912.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="BackgroundPanel/Layout/BlockType"]
margin_top = 3.0
margin_right = 71.0
margin_bottom = 17.0
text = "Block type:"

[node name="OptionList" type="OptionButton" parent="BackgroundPanel/Layout/BlockType"]
margin_left = 75.0
margin_right = 151.0
margin_bottom = 20.0
text = "Normal"
items = [ "Normal", null, false, 0, null, "Note", null, false, 1, null ]
selected = 0

[node name="TextContent" type="VBoxContainer" parent="BackgroundPanel/Layout"]
margin_top = 64.0
margin_right = 1912.0
margin_bottom = 1020.0
size_flags_vertical = 3

[node name="Editor" type="HBoxContainer" parent="BackgroundPanel/Layout/TextContent"]
margin_right = 1912.0
margin_bottom = 956.0
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="BackgroundPanel/Layout/TextContent/Editor"]
margin_right = 1880.0
margin_bottom = 956.0
rect_min_size = Vector2( 0, 240 )
size_flags_horizontal = 3
wrap_enabled = true

[node name="Label" type="Label" parent="BackgroundPanel/Layout/TextContent/Editor/TextEdit"]
margin_left = 8.0
margin_top = 3.0
margin_right = 97.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 0.305882 )
text = "Write content here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpandButton" type="Button" parent="BackgroundPanel/Layout/TextContent/Editor"]
margin_left = 1884.0
margin_right = 1912.0
margin_bottom = 956.0
icon = SubResource( 5 )

[node name="VisualElement" type="HBoxContainer" parent="BackgroundPanel/Layout"]
margin_top = 1024.0
margin_right = 1912.0
margin_bottom = 1048.0

[node name="Label" type="Label" parent="BackgroundPanel/Layout/VisualElement"]
margin_top = 5.0
margin_right = 99.0
margin_bottom = 19.0
text = "Visual Element:"

[node name="LineEdit" type="LineEdit" parent="BackgroundPanel/Layout/VisualElement"]
margin_left = 103.0
margin_right = 1615.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )

[node name="SelectFileButton" type="Button" parent="BackgroundPanel/Layout/VisualElement"]
margin_left = 1619.0
margin_right = 1709.0
margin_bottom = 24.0
hint_tooltip = "Select a file to add a visual element to the lesson step (an image, a scene, etc)."
text = "Select File..."

[node name="ClearFileButton" type="Button" parent="BackgroundPanel/Layout/VisualElement"]
margin_left = 1713.0
margin_right = 1757.0
margin_bottom = 24.0
hint_tooltip = "Remove the visual element from the lesson step."
text = "Clear"

[node name="AlignLeftCheckBox" type="CheckBox" parent="BackgroundPanel/Layout/VisualElement"]
margin_left = 1761.0
margin_right = 1912.0
margin_bottom = 24.0
hint_tooltip = "By default, the visual element is added to the right of the text content."
text = "Element on the left"

[node name="ContentSeparator" type="HBoxContainer" parent="BackgroundPanel/Layout"]
margin_top = 1052.0
margin_right = 1912.0
margin_bottom = 1076.0

[node name="CheckBox" type="CheckBox" parent="BackgroundPanel/Layout/ContentSeparator"]
margin_right = 184.0
margin_bottom = 24.0
text = "Separator after the block"

[node name="DropTarget" type="Control" parent="."]
visible = false
margin_left = 4.0
margin_top = 2.0
margin_right = 1916.0
margin_bottom = 1078.0
mouse_filter = 1

[node name="ConfirmDialog" type="ConfirmationDialog" parent="."]
margin_left = 4.0
margin_top = 2.0
margin_right = 1916.0
margin_bottom = 1078.0
rect_min_size = Vector2( 380, 80 )
window_title = ""
dialog_autowrap = true

[node name="TextEditDialog" parent="." instance=ExtResource( 2 )]
visible = false
margin_top = 2.0
margin_bottom = 1078.0
